--- a/css/global.css
+++ b/css/global.css
@@ -12,7 +12,7 @@ a{
  }
 a:hover{
 text-decoration:none;
-color:#c1e729;
+color:#ffcb05;
 }
 ul{
 padding:0;
@@ -71,7 +71,7 @@ margin:0;
    width:100%;
    }
 .button{
-background:#c1e729;
+background:#ffcb05;
 display:inline-block;
 color:#000;
 padding:20px 40px;
@@ -79,7 +79,7 @@ margin-top:10px;
   }
 .button:hover{
 color:#fff;
-background:#000;
+background:#121652;
   }
 .button i{
 margin-left:5px;
@@ -93,8 +93,8 @@ padding:20px 40px;
 margin-top:15px;
   }
 .button_1:hover{
-color:#000;
-background:#c1e729;
+color:#121652;
+background:#ffcb05;
   }
 .button_1 i{
 margin-left:5px;
@@ -126,17 +126,17 @@ margin-left:5px;
  }
 .active_tab{
     color:#fff!important;
-	border-bottom:3px solid #c1e729;
+	border-bottom:3px solid #ffcb05;
   }
 .col{
 color:#fff;  
   }
 .col_1{
-color:#c1e729; 
+color:#ffcb05;
   }
 .gallery_h hr{
  border-width:5px;
- border-color:#c1e729;
+ border-color:#ffcb05;
  width:5%;
  margin-bottom:0; 
   }
@@ -163,10 +163,10 @@ margin-top:20px;
   }
 #header .navbar-brand i{
 margin-right:5px;
-color:#c1e729;
+color:#ffcb05;
   }
 #header .navbar-brand span{
-  color:#c1e729;
+  color:#ffcb05;
   }
 #header .tag_menu{
   color:#fff;
@@ -177,11 +177,11 @@ color:#c1e729;
 	}
 #header .tag_menu:hover{
   color:#fff;
-  border-bottom:3px solid #c1e729;
+  border-bottom:3px solid #ffcb05;
 	}
 #header .tag_menu:focus{
   color:#fff;
-  border-bottom:3px solid #c1e729;
+  border-bottom:3px solid #ffcb05;
 	}
 
 .navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:hover, .navbar-default .navbar-nav>.open>a:focus{
@@ -194,8 +194,8 @@ color:#c1e729;
   margin-top:5px;
    }
 #header .drop_1 a:hover{
-background:#c1e729;
-color:#000;
+background:#ffcb05;
+color:#121652;
    }
 #header .drop_1 a{
 color:#e1e1e1;
@@ -206,7 +206,7 @@ padding-bottom:10px;
     border-width: 2px 0 0 2px;
     left: 4px;
     top: 4px;
-	border-color: #c1e729;
+	border-color: #ffcb05;
 	content: "";
     border-style: solid;
     height: 30%;
@@ -217,7 +217,7 @@ padding-bottom:10px;
     border-width: 0 2px 2px 0;
     bottom: 4px;
     right: 4px;
-	border-color: #c1e729;
+	border-color: #ffcb05;
 	content: "";
     border-style: solid;
     height: 30%;
@@ -233,7 +233,7 @@ padding-bottom:10px;
     border-width: 2px 0 0 2px;
     left: 4px;
     top: 4px;
-	border-color: #c1e729;
+	border-color: #ffcb05;
 	content: "";
     border-style: solid;
     height: 30%;
@@ -244,7 +244,7 @@ padding-bottom:10px;
     border-width: 0 2px 2px 0;
     bottom: 4px;
     right: 4px;
-	border-color: #c1e729;
+	border-color: #ffcb05;
 	content: "";
     border-style: solid;
     height: 30%;
@@ -252,8 +252,8 @@ padding-bottom:10px;
     width: 30%;
 }
 .drop_2 .btn-primary{
-   background:#c1e729;
-   border:1px solid #c1e729;
+   background:#ffcb05;
+   border:1px solid #ffcb05;
    color:#000;
    }
    
@@ -345,14 +345,14 @@ padding-bottom:10px;
   padding-left:15px;
   }
 .wrap_inner .top_right p a:hover{
-color:#c1e729;
+color:#ffcb05;
   }
 
 .wrap_inner_2{
   padding:20px; 
    }
 .wrap_inner_2 h3{
-  background:#c1e729;
+  background:#ffcb05;
   padding:10px;
   color:#000;
   }
@@ -375,7 +375,7 @@ color:#c1e729;
 #footer{
 padding-top:40px;
 padding-bottom:40px;
-background:#000;  
+background:#121652;
   }
   
 .footer_1_i h4{
@@ -388,7 +388,7 @@ margin-bottom:20px;
 margin-right:5px;
  }
 .footer_1_i h5 a{
-color:#c1e729;
+color:#ffcb05;
  }
 .footer_1_i h5 a:hover{
 color:#fff;
@@ -405,7 +405,7 @@ margin-top:8px;
 color:#999;
  }
 .footer_1_i1 h5 a:hover{
-color:#c1e729;
+color:#ffcb05;
  }
 .footer_1_i1 h5{
  margin-bottom:20px;
@@ -504,7 +504,7 @@ a.socialIcon:hover, .socialHoverClass {
 }
 
 .footer_1_i2 ul li a {
- background-color: #c1e729;   
+ background-color: #ffcb05;
 }
 
 .footer_2{
@@ -534,7 +534,7 @@ a.socialIcon:hover, .socialHoverClass {
  color:#999;
  }
 .center_blog_1r ul li a:hover{
- color:#c1e729; 
+ color:#ffcb05;
  }
  
 .center_about_m{
@@ -566,16 +566,16 @@ max-height:none;
     border:none;
 }
 .navbar-toggle{
- background:#c1e729;
+ background:#ffcb05;
  margin-top:9px;
  border:none;
  border-radius:0; 
   }
 .navbar-toggle:hover{
- background:#c1e729!important; 
+ background:#ffcb05!important;
   }
 .navbar-toggle:focus{
- background:#c1e729!important; 
+ background:#ffcb05!important;
   }
 .navbar-toggle .icon-bar{
  background:#fff!important; 
@@ -603,15 +603,15 @@ border-bottom:1px solid #8f9092;
   }
 #header .tag_menu:hover{
 border:none;
-background:#c1e729;
+background:#ffcb05;
 	}
 #header .tag_menu:focus{
 border:none;
-background:#c1e729;
+background:#ffcb05;
 	}
 
 .active_tab{
-background:#c1e729;
+background:#ffcb05;
 border:none;
   }
   
